# esp32_cpp_starter

./: .clang-format  .clangd  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  main.cpp
main/domain/interface/: ILcdService.hpp  IWifiService.hpp  ildc_service.hpp  invs_service.hpp  iwifi_service.hpp
main/lcd/: LcdService.cpp  LcdService.h  LcdService.hpp
main/service/lcd/: lcd_service.cpp  lcd_service.hpp
main/service/storage/: nvs_service.cpp  nvs_service.hpp
main/service/wifi/: wifi_service.cpp  wifi_service.hpp
main/wifi/: WifiService.cpp  WifiService.hpp
wiki/: Adding-Libraries-via-CPM.md  ESP-IDF-Clion.md
